--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Login with Crypto.js</title>
 </head>
 <body>
     <h1>Login with Crypto.js</h1>
-    <p>Here you can see the registered users and their info; obviously, displaying passwords is an extremely bad practice, and this is only for demonstration.</p>
+    <p>Users that have an account (Displayed only for demonstration)</p>
     <ul id="userList"></ul>
 
     <div>
@@ -19,13 +20,9 @@
       <button id="saveUserBtn">Spara</button>
     </div>
 
-    <div>
-      <h2>Login here:</h2>
-      <input type="text" id="loginUsername" placeholder="Användarnamn" />
-      <input type="password" id="loginPassword" placeholder="Lösenord" />
-      <button id="loginUserBtn">Logga in</button>
-      <button id="logoutUserBtn">Logga ut</button>
+    <div id="loginForm">
     </div>
     <h3 id="userGreeting">Godmorgon!</h3>
+    <div id="loggedInfo"></div>
 </body>
 </html>
