--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <title>Login with Crypto.js</title>
 </head>
 <body>
-    <h1>Login with Crypto.js</h1>
-    <p>Users that have an account (Displayed only for demonstration)</p>
+    <h1>Login with Crypto.js and create user with uuid</h1>
+    <p>Users that already have an account (Displayed only for demonstration)</p>
     <ul id="userList"></ul>
 
     <div>
       <p>New user? Create an account!</p>
-      <input type="text" id="newUser" placeholder="användarnamn"/>
-      <input type="password" id="newUserPassword" placeholder="lösenord"/>
-      <button id="saveUserBtn">Spara</button>
+      <input type="text" id="newUser" placeholder="username"/>
+      <input type="password" id="newUserPassword" placeholder="password"/>
+      <button id="saveUserBtn">Create user</button>
     </div>
 
     <div id="loginForm">
     </div>
-    <h3 id="userGreeting">Godmorgon!</h3>
+    <h3 id="userGreeting"></h3>
     <div id="loggedInfo"></div>
 </body>
 </html>
