--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer type="module"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="./src/script.js" defer type="module"></script>
+    <link rel="stylesheet" href="./src/style/style.css" />
     <title>Login with Crypto.js</title>
 </head>
 <body>
