:memo: changed title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./src/script.js" defer type="module"></script>
     <link rel="stylesheet" href="./src/style/style.css" />
-    <title>Login with Crypto.js</title>
+    <title>Login with Crypto.js and create user with uuid</title>
 </head>
 <body>
     <h1>Login with Crypto.js and create user with uuid</h1>
